DEV-005: Added tests and renamed package

--- a/.gitignore
+++ b/.gitignore
@@ -186,13 +186,12 @@ pyvenv.cfg
 pip-selfcheck.json
 
 # Visual Studio Code # 
-.vscode/* 
+.vscode
 .vscode/settings.json 
 .vscode/tasks.json 
 .vscode/launch.json 
 .vscode/extensions.json 
 .history
-
 
 # Data #
 data/
