DEV-006: Added tests for multiple base classes

--- a/tests/test.env
+++ b/tests/test.env
@@ -1,4 +1,4 @@
 PIWIK_CLIENT_ID="test-client-id"
 PIWIK_CLIENT_SECRET="test-client-secret"
 PIWIK_URL="https://test.piwik.pro"
-PIWIK_URL_AUTH="https://test.piwik.pro/auth/token"
+PIWIK_AUTH_URL="https://test.piwik.pro/auth/token"
