--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,11 +10,12 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.10"
-pydantic = "^2.6.0"
+pydantic = "^2.6.1"
 pydantic-settings = "^2.1.0"
 requests = "^2.31.0"
 oauthlib = "^3.2.2"
 requests-oauthlib = "^1.3.1"
+requests-mock = "^1.11.0"
 
 
 [tool.poetry.group.test.dependencies]
