--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ pytest-cov = "^5.0.0"
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.6.2"
 commitlint = "^1.2.0"
+datamodel-code-generator = "^0.25.9"
 
 [build-system]
 requires = ["poetry-core"]
